# the whole CMakeLists.txt for project grape
PROJECT(pine)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

#SET(CMAKE_VERBOSE_MAKEFILE ON)
#set(CROSS_COMPILE_ARM 1)
SET(CMAKE_SYSTEM_NAME Linux)

#disable/enable build for arm linux system,like S32V
#SET(CMAKE_SYSTEM_PROCESSOR arm)
SET(CMAKE_SYSTEM_PROCESSOR x86_64)

SET(TARGET_STAGING_PREFIX /opt/s32v-build/staging)
SET(TARGET_SYSROOT /opt/s32v-build/sysroot)
SET(TARGET_C_COMPILER /opt/s32v-build/gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu/bin/aarch64-linux-gnu-gcc)
SET(TARGET_CXX_COMPILER /opt/s32v-build/gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu/bin/aarch64-linux-gnu-g++)


SET(LIBRARY_BUILDING TRUE)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/include
)

LINK_DIRECTORIES(
  ${PROJECT_BINARY_DIR}/lib
)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR})


SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR})

#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/lib/debug)
#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib/release)
#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/lib/Release)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)
