ADD_DEFINITIONS(-DNO_CRYPTO)

INCLUDE(${CMAKE_SOURCE_DIR}/CMakeBuild.txt)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../librtmp)


ADD_EXECUTABLE(
    pine-client
    main.c
)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR})

FIND_LIBRARY(bin rtmp)

TARGET_LINK_LIBRARIES(pine-client rtmp)

