PROJECT(rtmp)

ADD_DEFINITIONS(-DNO_CRYPTO)

INCLUDE_DIRECTORIES(.)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR})

AUX_SOURCE_DIRECTORY(. SRC_LIST)

INCLUDE(${CMAKE_SOURCE_DIR}/CMakeBuild.txt)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_LIST})

#TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread)
