PROJECT(pine-pusher)

ADD_DEFINITIONS(-DNO_CRYPTO)

INCLUDE_DIRECTORIES(.)
INCLUDE(${CMAKE_SOURCE_DIR}/CMakeBuild.txt)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../librtmp)
INCLUDE_DIRECTORIES(include)

ADD_EXECUTABLE(
    pine-pusher

    push.cpp
    main.cpp
)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR})
FIND_LIBRARY(bin rtmp)

TARGET_LINK_LIBRARIES(pine-pusher rtmp)
